--- a/css/style.css
+++ b/css/style.css
@@ -11,123 +11,260 @@ html {
   margin: 0;
 }
 
-body {
-  background-color: #000;
-  height: 100%;
-  background-image: url("../assets/blur-2.png");
-  width: 100%;
-  background-position: right;
-  background-repeat: no-repeat;
-}
-
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding-top: 20px;
-  height: 55px;
-  gap: 16px;
-}
-
-main {
-  width: 100%;
-  height: calc(100% - 75px);
-  background: url("../assets/blur-1.png");
-  background-position: left;
-  background-repeat: no-repeat;
-  position: relative;
-}
-
-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-}
-
-ul {
-  display: flex;
-  gap: 28px;
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-.wrapperNav {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  align-items: center;
-  width: 100%;
-}
-
-.controlImage {
-  padding-left: 40%;
-}
-
-.btnControl {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 30%;
-}
-
-.btnCoffee {
-  background-color: transparent;
-  border: 2px solid #8257e5;
-  border-radius: 10px;
-  height: 40px;
-  width: 160px;
-  font-size: 12px;
-  cursor: pointer;
-}
-
-.btnCoffee:hover {
-  text-shadow: -1px -1px 0 #8257e5, 1px -1px 0 #8257e5, -1px 1px 0 #8257e5,
-    1px 1px 0 #8257e5;
-  border: 2px solid #8257e5;
-  color: #fff;
-  /* font-weight: bold; */
-}
-
-.textWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: center; */
-  padding-top: 50px;
-}
-
-h1 {
-  font-size: 70px;
-  padding: 0;
-  margin: 0;
-}
-
-.greatCode {
-  text-shadow: -1px -1px 0 #8257e5, 1px -1px 0 #8257e5, -1px 1px 0 #8257e5,
-    1px 1px 0 #8257e5;
-  color: #000;
-}
-
-.coffeeImage {
-  background-image: url("../assets/rocket-coffee.png");
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: 750px;
-  position: absolute;
-  background-position: bottom;
-}
-
-/* @media screen and (max-width: 768px){
-  nav{
-    background-image: url('../assets/logo-mobile.svg');
+/* desktop  */
+@media (min-width: 769px) {
+  body {
+    background-color: #000;
+    height: 100%;
+    background-image: url("../assets/blur-2.png");
+    width: 100%;
+    background-position: right;
     background-repeat: no-repeat;
-    display: flex;
   }
 
-  ul{
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    height: 55px;
+    gap: 16px;
+  }
+
+  main {
+    width: 100%;
+    height: calc(100% - 75px);
+    background: url("../assets/blur-1.png");
+    background-position: left;
+    background-repeat: no-repeat;
+    position: relative;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* position: absolute; */
+  }
+
+  ul {
+    display: flex;
+    gap: 28px;
+    list-style: none;
+  }
+
+  li,
+  a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .wrapperNav {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+  }
+
+  .controlImage {
+    padding-left: 40%;
+  }
+
+  .btnControl {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 30%;
+  }
+
+  .btnCoffee {
+    background-color: transparent;
+    border: 2px solid #8257e5;
+    border-radius: 10px;
+    height: 40px;
+    width: 160px;
+    font-size: 12px;
+    cursor: pointer;
+  }
+
+  .btnCoffee:hover {
+    text-shadow: -1px -1px 0 #8257e5, 1px -1px 0 #8257e5, -1px 1px 0 #8257e5,
+      1px 1px 0 #8257e5;
+    border: 2px solid #8257e5;
+    color: #fff;
+    /* font-weight: bold; */
+  }
+
+  .textWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    padding-top: 50px;
+  }
+
+  h1 {
+    font-size: 70px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .greatCode {
+    text-shadow: -1px -1px 0 #8257e5, 1px -1px 0 #8257e5, -1px 1px 0 #8257e5,
+      1px 1px 0 #8257e5;
+    color: #000;
+  }
+
+  .coffeeImage {
+    background-image: url("../assets/rocket-coffee.png");
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: 750px;
+    position: absolute;
+    background-position: bottom;
+  }
+
+  .wrapperNavMobile,
+  .mobileTitle,
+  .buttonMob {
     display: none;
   }
-} */
+}
+
+/* mobile */
+@media (max-width: 768px) {
+  /*desabilitando navbar desktop*/
+  .wrapperNav {
+    display: none;
+  }
+
+  /*no momento que clicar no menu hamburger vai abrir o menu responsivo*/
+  nav .menu {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000;
+  }
+
+  #navbar.active .menu {
+    display: block;
+  }
+
+  li {
+    cursor: pointer;
+    font-size: 32px;
+    border: 1px solid #29292e;
+    padding: 20px;
+  }
+
+  li:hover{
+    border-left: 5px solid #8257e5;
+  }
+
+  a{
+    text-decoration: none;
+  }
+
+  body {
+    background-color: #000;
+    height: 100%;
+    width: 100%;
+    background-image: url("../assets/blur-1.png");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-attachment: fixed;
+  }
+
+  main {
+    height: 100%;
+    width: 100%;
+  }
+
+  .wrapperNavMobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 140px;
+    background-color: #000;
+    border: 1px solid #29292e;
+  }
+
+  .mobileImage {
+    padding-left: 30px;
+  }
+
+  .logoMobile {
+    height: 50px;
+  }
+
+  .menuMobile {
+    padding-inline: 20px;
+  }
+
+  .mobileContainer {
+    padding-top: 20%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    line-height: 1.4;
+    letter-spacing: 0.4rem;
+    padding-inline: 1%;
+  }
+
+  .mobileTitle {
+    display: flex;
+    align-items: center;
+    font-size: 50px;
+    text-align: center;
+  }
+
+  .btnMobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 16%;
+  }
+
+  .buttonMob {
+    display: inline;
+    background-color: transparent;
+    border: 1px solid #8257e5;
+    border-radius: 10px;
+    height: 54px;
+    width: 240px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+  .textWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 14%;
+  }
+
+  .coffeeImage {
+    background-image: url("../assets/rocket-coffee.png");
+    width: 100%;
+    height: 70%;
+    background-repeat: no-repeat;
+    background-size: 750px;
+    position: absolute;
+    background-position: bottom;
+  }
+
+  h1 {
+    font-size: 70px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .greatCode {
+    text-shadow: -1px -1px 0 #8257e5, 1px -1px 0 #8257e5, -1px 1px 0 #8257e5,
+      1px 1px 0 #8257e5;
+    color: #000;
+  }
+}
